--- a/app/package.json
+++ b/app/package.json
@@ -23,15 +23,18 @@
     "expo-constants": "~8.0.0",
     "expo-font": "~8.0.0",
     "expo-web-browser": "~8.0.0",
+    "firebase": "^7.11.0",
     "galio-framework": "^0.6.3",
-    "native-base": "^2.13.8",
+    "native-base": "^2.13.12",
+    "npm": "^6.14.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "uninstall": "0.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
