--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "~10.0.0",
+    "@expo/vector-icons": "^10.0.6",
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/bottom-tabs": "^5.0.0",
     "@react-navigation/native": "^5.0.0",
@@ -22,12 +22,12 @@
     "expo-asset": "~8.0.0",
     "expo-constants": "~8.0.0",
     "expo-font": "~8.0.0",
-    "expo-image-picker": "~8.0.1",
-    "expo-permissions": "~8.0.0",
+    "expo-image-picker": "^8.0.2",
+    "expo-permissions": "^8.0.0",
     "expo-web-browser": "~8.0.0",
     "firebase": "^7.11.0",
     "galio-framework": "^0.6.3",
-    "native-base": "^2.13.12",
+    "native-base": "^2.13.8",
     "npm": "^6.14.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
