--- a/app/package.json
+++ b/app/package.json
@@ -41,7 +41,8 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "babel-preset-expo": "~8.0.0",
-    "jest-expo": "~36.0.1"
+    "jest-expo": "~36.0.1",
+    "react-native-dotenv": "^0.2.0"
   },
   "private": true
 }
